# Haskell-Pacman

./: .gitignore  Highscores.txt  gloss-counter.cabal  hacman.cabal  haskell-pacman.cabal  testlevel.txt
Levels/: Level01.txt  Level02.txt  PvP01.txt  PvP02.txt
old-time-1.1.0.3/: old-time.cabal
src/: Controller.hi  Controller.hs  Enemy.hs  HighScoreHandler.hs  Images.hs  Level.hi  Level.hs  Level1.txt  Main.hi  Main.hs  Model.hi  Model.hs  Player.hs  View.hi  View.hs
