name:                hacman
version:             0.1.0.0
license-file:        LICENSE
author:              Renzo Schindeler & Steven Heinen
maintainer:          --
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hacman
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       gloss-game,
                       random,
                       directory
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       Controller,
                       Enemy,
                       Level,
                       Model,
                       View,
                       Images,
                       HighScoreHandler